# fastcc

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.claude/skills/git-commit/: SKILL.md
.github/: copilot-instructions.md
docs/src/: api.rst  conf.py  index.rst
docs/src/_templates/autosummary/: module.rst
examples/: app.py  client.py  stream_app.py  stream_client.py
src/fastcc/: __init__.py  annotations.py  app.py  client.py  codec.py  codec_registry.py  codecs.py  constants.py  exceptions.py  py.typed  qos.py  response.py  route.py  router.py  serialization.py  utilities.py
src/fastcc/utilities/: __init__.py  analyze.py  annotations.py  constants.py  inspection.py  interpretation.py  message.py  mqtt.py  security.py  type_aliases.py  type_definitions.py  validation.py
